Typing on fixed element textarea scrolls content to the top
Categories
(GeckoView :: General, defect)
Tracking
(firefox77 fixed)
| Tracking | Status | |
|---|---|---|
| firefox77 | --- | fixed |
People
(Reporter: agi, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(3 files)
Load testcase (live here: https://agi.sferro.dev/testcases/scrolling.html ). Scroll to the bottom of the document and then focus on the fixed textearea. Notice content scrolls all the way to the top.
| Reporter | ||
Comment 1•5 years ago
|
||
| Reporter | ||
Comment 2•5 years ago
|
||
Looks like this is a regression, bisecting.
| Reporter | ||
Comment 3•5 years ago
|
||
9:09.40 INFO: Last good revision: 97879e1e1dcb4c0577bb4ed4b7f803a9c236fc22
9:09.40 INFO: First bad revision: 041c310f2bf7e1db11e65f883076627129e453c0
9:09.40 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=97879e1e1dcb4c0577bb4ed4b7f803a9c236fc22&tochange=041c310f2bf7e1db11e65f883076627129e453c0
Updated•5 years ago
|
| Reporter | ||
Comment 4•5 years ago
|
||
Emilio do you know what could be going wrong here?
| Assignee | ||
Comment 6•5 years ago
|
||
We lifted this restriction because with bug 656036 it makes sense to zoom into a
focused input in a fixed subtree. But this causes undesired panning up.
We could conceivably fix it if needed, but for now preserve the previous
behavior of not panning nor zooming.
| Assignee | ||
Updated•5 years ago
|
Comment 8•5 years ago
|
||
| bugherder | ||
Description
•